# 3d_quick_viewer

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
config/: context_menu.json
screen_shot/: 未命名绘图.drawio
src/: 3d_preview_widget.cpp  3d_preview_widget.h  3d_quick_viewer.cpp  3d_quick_viewer.h  3d_quick_viewer.ui  CMakeLists.txt  block_queue.h  copy_to_clipbord.bat  file_system_viewer.cpp  file_system_viewer.h  main.cpp  records.txt  shape_tessellater.cpp  shape_tessellater.h
src/occ/: OcctWindow.cxx  OcctWindow.h  View.cxx  View.h
src/reader/: step_reader.cpp  step_reader.h
